tests/should_fail/logic_alias/missing_trait_impl2.stderr
error: Cannot #[logic_alias] in this context, because logic function is bound to type S2 and program function is bound to type S1
  --> missing_trait_impl2.rs:15:5
   |
15 |     #[logic_alias(S2::is_zero_log(self.0))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> missing_trait_impl2.rs:16:5
   |
16 |     fn is_zero(&self) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> missing_trait_impl2.rs:23:5
   |
23 |     fn is_zero_log(x: i64) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

